# dynawo-large-scale-validation

./: .gitignore  README.md
contingencies-screening/: ARCHITECTURE.md  README.md  build_and_install.sh  pyproject.toml
contingencies-screening/analysis/: analyze_individual_contg_RTE.ipynb  volt_level_profiles_20230104-2100.ipynb  volt_level_profiles_20230615-0500.ipynb
contingencies-screening/doc/: Contingencies_dictionaries.md  Prediction_attributes.md  SUMMARY_CONCLUSIONS.md  USAGE.md
contingencies-screening/doc/user/: ANALYSIS.md  INSTALLATION.md  USAGE.md
contingencies-screening/src/dynawo_contingencies_screening/: contingencies_screening.py
contingencies-screening/src/dynawo_contingencies_screening/analyze_loadflow/: LR_no_taps.json  LR_taps.json  ML_cont_no_taps.pkl  ML_cont_taps.pkl  ML_disc_no_taps.pkl  ML_disc_taps.pkl  ML_no_taps.pkl  ML_taps.pkl  extract_results_data.py  human_analysis.py  machine_learning_analysis.py
contingencies-screening/src/dynawo_contingencies_screening/commons/: calc_case_diffs.py  manage_files.py
contingencies-screening/src/dynawo_contingencies_screening/doc/: ANALYSIS.md  Contingencies_dictionaries.md  Tutorial.md  USAGE.md
contingencies-screening/src/dynawo_contingencies_screening/notebook_analysis/: SHAP.md  analyze_individual_contg_RTE.ipynb  analyze_results.ipynb  analyze_results_RTE.ipynb  analyze_results_code.py
contingencies-screening/src/dynawo_contingencies_screening/notebook_analysis/.ipynb_checkpoints/: analyze_results_RTE-checkpoint.ipynb  analyze_results_code-checkpoint.py
contingencies-screening/src/dynawo_contingencies_screening/prepare_basecase/: create_contingencies.py  matching_elements.py  prepare_basecase.py  prepare_basecase_manually.py
contingencies-screening/src/dynawo_contingencies_screening/run_dynawo/: run_dynawo.py
contingencies-screening/src/dynawo_contingencies_screening/run_loadflow/: run_hades.py
large-scale-validation/src/dynawo_validation/attic/: bus_contingencies.py  load_contingencies_identByBus.py  sparklines.py  xml_qv.py
large-scale-validation/src/dynawo_validation/attic/launchers/: astreToCSV.py
large-scale-validation/src/dynawo_validation/commons/: create_graph.py  distance_matrix.py  extract_automata_changes.py
large-scale-validation/src/dynawo_validation/commons/xml_utils/: xml_extract_gens.py  xml_extract_loads.py
large-scale-validation/src/dynawo_validation/dynaflow/notebooks/: create_graph.py  generate_notebooks.py  simulator_A_vs_simulator_B_code.py
large-scale-validation/src/dynawo_validation/dynaflow/pipeline/: collect_aut_diffs.py  common_funcs.py  create_branchB_contg.py  create_gen_contg.py  create_load_contg.py  create_shunt_contg.py  dwo_jobinfo.py  extract_dynawo_automata_changes_basecase.py  extract_dynawo_automata_changes_contgcase.py  extract_hades_automata_changes_basecase.py  extract_hades_automata_changes_contgcase.py  extract_powerflow_values.py  group_dwo_events.py  run_pipeline.py  top_10_diffs_dflow.py
large-scale-validation/src/dynawo_validation/dynawaltz/notebooks/: generate_notebooks.py  simulator_A_vs_simulator_B_maincode.py
large-scale-validation/src/dynawo_validation/dynawaltz/pipeline/: calc_automata_diffmetrics.py  calc_curve_diffmetrics.py  common_funcs.py  create_branchB_contg.py  create_gen_contg.py  create_load_contg.py  create_shunt_contg.py  dwo_jobinfo.py  extract_automata_changes.py  prepare_pipeline_basecase.py  run_pipeline.py  top_10_diffs_dwaltz.py
